# bc-hostcall

./: CONTRIBUTING.md  Cargo.toml  README.md  compile_tests.sh
.github/workflows/: rust.yml
benchmark/: README.md
benchmark/host/: Cargo.toml
benchmark/host/src/: imports.rs  main.rs
benchmark/wasm/: Cargo.toml  wasm.wasm
benchmark/wasm/src/: exports.rs  main.rs
benchmark/wit-host/: Cargo.toml
benchmark/wit-host/src/: main.rs
benchmark/wit-wasm/: Cargo.toml  exports.wit  imports.wit  wit-wasm.wasm
benchmark/wit-wasm/src/: main.rs
modules/async-api/: Cargo.toml
modules/async-api/src/: ctx.rs  future.rs  lib.rs
modules/async-api/tests/integrate-wasm/: Cargo.toml  integrate-wasm.wasm
modules/async-api/tests/integrate-wasm/src/: host_call_wasm.rs  main.rs
modules/async-api/tests/unittest-future/: Cargo.toml  unittest-future.wasm
modules/async-api/tests/unittest-future/src/: main.rs
modules/async-rt/: Cargo.toml
modules/async-rt/src/: lib.rs  queue.rs  rt.rs  task.rs
modules/low-level/: Cargo.toml  README.md
modules/low-level/src/: host.rs  lib.rs  wasm.rs
modules/low-level/tests/guest/: Cargo.toml  guest.wasm
modules/low-level/tests/guest/src/: main.rs
modules/module-api/: Cargo.toml
modules/module-api/src/: lib.rs  manager.rs  module.rs
modules/rpc/: Cargo.toml  README.md  build.rs
modules/rpc/proto/: add.proto
modules/rpc/src/: abi.rs  adapter.rs  client.rs  context.rs  entry.rs  lib.rs  node.rs  server.rs
modules/rpc/tests/integrate-host/: Cargo.toml
modules/rpc/tests/integrate-host/src/: host_call_wasm.rs  lib.rs  wasm_call_host.rs
modules/rpc/tests/integrate-wasm/: Cargo.toml  build.sh
modules/rpc/tests/integrate-wasm/src/: host_call_wasm.rs  main.rs  wasm_call_host.rs
modules/serialize/: Cargo.toml
modules/serialize/src/: call_return.rs  general.rs  lib.rs
src/: lib.rs
tests/: README.md
tests/cli/: Cargo.toml
tests/cli/src/: exports.rs  imports.rs  main.rs
tests/wasm-dispatch/: Cargo.toml  wasm-dispatch.wasm
tests/wasm-dispatch/src/: exports.rs  imports.rs  main.rs
tests/wasm-service-a/: Cargo.toml  wasm-service-a.wasm
tests/wasm-service-a/src/: exports.rs
tests/wasm-service-b/: Cargo.toml  wasm-service-b.wasm
tests/wasm-service-b/src/: exports.rs  main.rs
