[package]
name = "bc-hostcall"
version = "0.1.0"
edition = "2021"
description = "An asynchronized wasm hostcall framework bridging between rust modules and rust host"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
low-level = { path = "modules/low-level" }
serialize = { path = "modules/serialize" }
rpc = { path = "modules/rpc" }
async-api = { path = "modules/async-api" }
module-api = { path = "modules/module-api" }

[workspace]
members = [
    "modules/low-level",
    "modules/serialize",
    "modules/rpc",
    "modules/rpc/tests/integrate-host",
    "modules/async-api",
    "modules/module-api",
    "tests/cli",
]
