[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bc-hostcall = { path = "../../" }
tokio = { version = "1.20.1", features = ["full"] }
reqwest = "0.11"

[dev-dependencies]
futures = "0.3.5"
