[package]
name = "wit-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git"}
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen.git"}
wasmtime = "0.39.1"
wasmtime-wasi = "0.39.1"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
