[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
low-level = { path = "../low-level" }
serialize = { path = "../serialize" }
serde = { version = "1.0.143", features = ["derive"] }
serde_bytes = "0.11.7"

[dev-dependencies]

